app/less/_create_initial_section.less
.create-initial-section {
  padding-top: @section-padding-top;

  .styled-placeholder {

    &.form-group {
      background-color: transparent;
      height: auto;
      border: 0;
      border-bottom: 1px solid #f2f2f2;
      border-radius: 0;
      margin-bottom: 0;

      &.focused {
        .control-label {
          opacity: 1;
          top: -20px;
          transform: scale(1);
          color: @iConnect-orange;
        }

        input {
          background-color: transparent;
          box-shadow: none;
          outline: none;
          border-bottom: 1px solid @iConnect-orange !important;
        }
      }
    }

    .control-label {
      .title-H2;
      color: #999;
      font-family: @iConnect-font-regular;
      font-size: 16 * @rem;
      font-weight: @fw-regular;
      line-height: 1.125;
      letter-spacing: .46px;
      margin-bottom: 0;
      opacity: .5;
      pointer-events: none;
      position: absolute;
      width: 100%;
      text-align: center;
      top: 18px;
      transform: scale(1);
      transform-origin: center top;
      transition: all .2s ease-in-out;
    }

    .form-control {
      align-self: flex-end;
    }

    input {
      .title-H2;
      color: #333;
      margin: 0;
      font-weight: @fw-regular;
      text-align: center;
      height: 65px;
      border-radius: 0;
      border-bottom: 1px solid transparent !important;
    }
  }

  .create-form {
    .form-group {
      .error {
        color: @iConnect-red;
        font-size: 11 * @rem;
        margin: 7px 0;
      }
    }

    input,
    input [type=tel],
    input [type=text],
    input [type=email],
    input [type=number],
    input [type=password] {
      background-color: transparent;
      border: 0;
    }

    .form-control {
      align-self: flex-end;
      box-shadow: none;
    }
  }

  .options {
    padding-top: 100px;

    .settings-option {
      text-align: center;

      .content {

        .hover-container {
          transition: all .2s ease-in-out;

          &.checked {
            label {
              .title {
                color: @iConnect-orange;
              }
              .fa {
                color: @iConnect-orange;
              }
            }
          }

          &:hover {
            label {
              .title {
                color: @iConnect-orange;
              }
              .fa {
                color: @iConnect-orange;
              }
            }
          }

          input[type=checkbox] {
            display:none;
          }

          label {
            cursor: pointer;
            margin-bottom: 90px;

            .fa {
              font-size: 50 * @rem;
              color: #8c96aa;
              display: block;
              transition: all .2s ease-in-out;
            }

            .title {
              display: block;
              margin-top: 65px;
              .title-H4;
              font-weight: @fw-regular;
              transition: all .2s ease-in-out;
            }
          }
        }

      }

    }
  }

  .ic-btn {
    display: block;
    margin: 0 auto 90px;
  }

}

